# proselint-wasm

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  build-wasm.sh  example.html
benches/: linting_benchmarks.rs
examples/: lint_docs.rs  lint_readme.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_linter.rs  fuzz_regex.rs
src/: check.rs  config.rs  engine.rs  lib.rs  position.rs
src/checks/: annotations.rs  archaism.rs  cliches.rs  dates_times.rs  hedging.rs  industrial_language.rs  lexical_illusions.rs  malapropisms.rs  misc.rs  mixed_metaphors.rs  mod.rs  mondegreens.rs  needless_variants.rs  nonwords.rs  oxymorons.rs  preferred_forms.rs  psychology.rs  redundancy.rs  restricted.rs  skunked_terms.rs  social_awareness.rs  spelling.rs  terms.rs  typography.rs  uncomparables.rs  weasel_words.rs
tests/wasm/: test.html  test.mjs
