[package]
name = "proselint-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Sajarin Dider"]
description = "Full Rust/WASM port of proselint - a linter for prose"
license = "MIT"
repository = "https://github.com/sajarin/proselint-wasm"
keywords = ["prose", "lint", "writing", "wasm", "grammar"]
categories = ["text-processing", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size in release builds
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
