[package]
name = "proselint-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Sajarin Dider"]
description = "Full Rust/WASM port of proselint - a linter for prose"
license = "MIT"
repository = "https://github.com/sajarin/proselint-wasm"
keywords = ["prose", "lint", "writing", "wasm", "grammar"]
categories = ["text-processing", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
aho-corasick = "1.1"
rayon = { version = "1.8", optional = true }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "linting_benchmarks"
harness = false

[profile.release]
# Optimize for speed (not size) - speed is priority for linting
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
